[package]
name = "cargo-todo"
version = "0.1.4"
authors = ["Clément Guiton <clement.guiton.dev@gmail.com>"]
edition = "2018"
description = "Cargo tool to display TODOs"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ProbablyClem/cargo-todo"
exclude = ["target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
walkdir = "2.3.1"
colored = "1.9.3"
string-parser= "^0.1.5"
regex = "1.3.9"
dirs = "2.0.2"